--- a/content/events/pyho-2025.md
+++ b/content/events/pyho-2025.md
@@ -11,6 +11,7 @@ params:
   event_type: "in_person"
   event_category: "conference"
   event_date: "2025-10-24"
+  event_date_end: "2025-10-25"
   event_host: "PyHo"
   event_localtime: ""
   event_tz: ""
