--- a/content/timeline/2015-07-13-10th-birthday.md
+++ b/content/timeline/2015-07-13-10th-birthday.md
@@ -12,4 +12,8 @@ params:
 Django has its first big birthday celebration. [A blog post](https://www.djangoproject.com/weblog/2015/jul/13/happy-10th-birthday-django/
 ) is written and a Django Birthday conference is held in the US. Also this series of video greetings is sent from community all-over the world:
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/ycKC3JMEk8U?si=aA1yutBYSxLLZgnr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+{{< privacy-embed 
+      provider="youtube" 
+      id="ycKC3JMEk8U" 
+      thumbnail="https://img.youtube.com/vi/ycKC3JMEk8U/maxresdefault.jpg" 
+>}}
